// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (--rule-doc-notices) basic shows description before other notices when using default notice ordering 1`] = `
"# test/no-foo

📝 Description for no-foo.

❌ This rule is deprecated.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-notices) basic shows the right rule doc notices 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).\\
❌ Deprecated.

| Name                           | Description             | 🔧 | 💡 | ❌  |
| :----------------------------- | :---------------------- | :- | :- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | 🔧 | 💡 | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-doc-notices) basic shows the right rule doc notices 2`] = `
"# test/no-foo

💡 This rule is manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

❌ This rule is deprecated.

📝 Description for no-foo.

❗ This rule identifies problems that could cause errors or unexpected behavior.

<!-- end auto-generated rule header -->
"
`;
